[build-system]
requires = ["setuptools >= 46.4", "wheel ~= 0.37"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=fpc --cov-report html"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc.)?abstractmethod"
]
