[metadata]
name = fpc
version = attr: fpc.__version__
description = ParaPy application
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords =
    ParaPy
    KBE
    Parametric
    Engineering
license = Proprietary
license_files =
    LICENSE.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: ParaPy
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Natural Language :: English
    License :: Other/Proprietary License
    Topic :: Scientific/Engineering :: Software Development
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows

[options]
python_requires = >=3.9
zip_safe = False
include_package_data = True
packages =
    find:
test_suite = tests
install_requires =
    parapy~=1.11
    parapy-webgui~=1.1
    parapy-webgui-mui~=0.10
    parapy-webgui-layout~=0.12
    fastapi~=0.65

[options.packages.find]
exclude =
    tests*
